parser.go

// line 1 "ragel/parser.rl"
package httpstring

import (
	"strings"
	"time"
)



// line 10 "ragel/parser.rl"

// line 15 "parser.go"
const cache_control_parser_start int = 1
const cache_control_parser_first_final int = 16
const cache_control_parser_error int = 0

const cache_control_parser_en_main int = 1


// line 11 "ragel/parser.rl"

// NewCacheControl is a struct type used for storing parsed tokens
func NewCacheControl(data []byte) *CacheControl {
	
	cs, p, pe := 0, 0, len(data)
	eof := pe

	str_beg := 0
	str_end := 0
	num, neg := 0, 1
	val := false


	cc := &CacheControl{
		strings: make(map[string]string),
		durations: make(map[string]time.Duration),
	}

	setbool := func(s string) {cc.setflag(s) }

	setstrings := func(k string) { 
		setbool(k)
		cc.strings[strings.ToLower(k)] = string(data[str_beg:str_end])
	}
	setduration := func(k string) { 
		setbool(k)
		v := time.Duration(int64(neg * num))
		cc.durations[k] = time.Second * v
		num = 0
		neg = 1
		val = false
	}


// line 58 "parser.go"
	{
	cs = cache_control_parser_start
	}

// line 63 "parser.go"
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 1:
		goto st_case_1
	case 0:
		goto st_case_0
	case 16:
		goto st_case_16
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 17:
		goto st_case_17
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 6:
		goto st_case_6
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 7:
		goto st_case_7
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 8:
		goto st_case_8
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 9:
		goto st_case_9
	case 70:
		goto st_case_70
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	case 100:
		goto st_case_100
	case 101:
		goto st_case_101
	case 102:
		goto st_case_102
	case 103:
		goto st_case_103
	case 104:
		goto st_case_104
	case 105:
		goto st_case_105
	case 106:
		goto st_case_106
	case 12:
		goto st_case_12
	case 107:
		goto st_case_107
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 108:
		goto st_case_108
	case 109:
		goto st_case_109
	case 110:
		goto st_case_110
	case 111:
		goto st_case_111
	case 112:
		goto st_case_112
	case 113:
		goto st_case_113
	case 114:
		goto st_case_114
	case 115:
		goto st_case_115
	case 116:
		goto st_case_116
	case 117:
		goto st_case_117
	case 118:
		goto st_case_118
	case 119:
		goto st_case_119
	case 120:
		goto st_case_120
	case 121:
		goto st_case_121
	case 122:
		goto st_case_122
	case 123:
		goto st_case_123
	case 124:
		goto st_case_124
	case 125:
		goto st_case_125
	case 126:
		goto st_case_126
	case 127:
		goto st_case_127
	case 128:
		goto st_case_128
	case 129:
		goto st_case_129
	case 130:
		goto st_case_130
	case 131:
		goto st_case_131
	case 132:
		goto st_case_132
	case 133:
		goto st_case_133
	case 134:
		goto st_case_134
	case 135:
		goto st_case_135
	case 15:
		goto st_case_15
	case 136:
		goto st_case_136
	case 137:
		goto st_case_137
	case 138:
		goto st_case_138
	}
	goto st_out
tr42:
// line 69 "ragel/parser.rl"

 str_end = p 
	goto st1
tr56:
// line 56 "ragel/parser.rl"

 setduration("max-age") 
	goto st1
tr63:
// line 61 "ragel/parser.rl"


		setbool("max-stale");
		if val {
			setduration("max-stale")
		}
	
	goto st1
tr79:
// line 58 "ragel/parser.rl"

 setduration("min-fresh") 
	goto st1
tr95:
// line 53 "ragel/parser.rl"

 setbool("must-revalidate") 
	goto st1
tr106:
// line 46 "ragel/parser.rl"

 setstrings("no-cache") 
	goto st1
tr110:
// line 69 "ragel/parser.rl"

 str_end = p 
// line 46 "ragel/parser.rl"

 setstrings("no-cache") 
	goto st1
tr116:
// line 48 "ragel/parser.rl"

 setbool("no-store"); 
	goto st1
tr126:
// line 51 "ragel/parser.rl"

 setbool("no-transform") 
	goto st1
tr141:
// line 52 "ragel/parser.rl"

 setbool("only-if-cached") 
	goto st1
tr151:
// line 45 "ragel/parser.rl"

 setstrings("private") 
	goto st1
tr155:
// line 69 "ragel/parser.rl"

 str_end = p 
// line 45 "ragel/parser.rl"

 setstrings("private") 
	goto st1
tr170:
// line 54 "ragel/parser.rl"

 setbool("proxy-revalidate") 
	goto st1
tr176:
// line 49 "ragel/parser.rl"

 setbool("public"); 
	goto st1
tr188:
// line 57 "ragel/parser.rl"

 setduration("s-maxage") 
	goto st1
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
// line 440 "parser.go"
		switch data[p] {
		case 32:
			goto st1
		case 33:
			goto st16
		case 77:
			goto st19
		case 78:
			goto st62
		case 79:
			goto st86
		case 80:
			goto st100
		case 83:
			goto st128
		case 109:
			goto st19
		case 110:
			goto st62
		case 111:
			goto st86
		case 112:
			goto st100
		case 115:
			goto st128
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 45:
			switch {
			case data[p] < 35:
				if 9 <= data[p] && data[p] <= 13 {
					goto st1
				}
			case data[p] > 39:
				if 42 <= data[p] && data[p] <= 43 {
					goto st16
				}
			default:
				goto st16
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
st_case_0:
	st0:
		cs = 0
		goto _out
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
		switch data[p] {
		case 32:
			goto st2
		case 33:
			goto st16
		case 44:
			goto st1
		case 59:
			goto st1
		case 61:
			goto st3
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto st2
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
tr40:
// line 69 "ragel/parser.rl"

 str_end = p 
	goto st2
tr55:
// line 56 "ragel/parser.rl"

 setduration("max-age") 
	goto st2
tr62:
// line 61 "ragel/parser.rl"


		setbool("max-stale");
		if val {
			setduration("max-stale")
		}
	
	goto st2
tr78:
// line 58 "ragel/parser.rl"

 setduration("min-fresh") 
	goto st2
tr94:
// line 53 "ragel/parser.rl"

 setbool("must-revalidate") 
	goto st2
tr105:
// line 46 "ragel/parser.rl"

 setstrings("no-cache") 
	goto st2
tr108:
// line 69 "ragel/parser.rl"

 str_end = p 
// line 46 "ragel/parser.rl"

 setstrings("no-cache") 
	goto st2
tr115:
// line 48 "ragel/parser.rl"

 setbool("no-store"); 
	goto st2
tr125:
// line 51 "ragel/parser.rl"

 setbool("no-transform") 
	goto st2
tr140:
// line 52 "ragel/parser.rl"

 setbool("only-if-cached") 
	goto st2
tr150:
// line 45 "ragel/parser.rl"

 setstrings("private") 
	goto st2
tr153:
// line 69 "ragel/parser.rl"

 str_end = p 
// line 45 "ragel/parser.rl"

 setstrings("private") 
	goto st2
tr169:
// line 54 "ragel/parser.rl"

 setbool("proxy-revalidate") 
	goto st2
tr175:
// line 49 "ragel/parser.rl"

 setbool("public"); 
	goto st2
tr187:
// line 57 "ragel/parser.rl"

 setduration("s-maxage") 
	goto st2
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
// line 645 "parser.go"
		switch data[p] {
		case 32:
			goto st2
		case 44:
			goto st1
		case 59:
			goto st1
		}
		if 9 <= data[p] && data[p] <= 13 {
			goto st2
		}
		goto st0
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		switch data[p] {
		case 34:
			goto st4
		case 124:
			goto tr9
		case 126:
			goto tr9
		}
		switch {
		case data[p] < 45:
			switch {
			case data[p] > 39:
				if 42 <= data[p] && data[p] <= 43 {
					goto tr9
				}
			case data[p] >= 33:
				goto tr9
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto tr9
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto tr9
				}
			default:
				goto tr9
			}
		default:
			goto tr9
		}
		goto st0
tr9:
// line 68 "ragel/parser.rl"

 str_beg = p 
	goto st17
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
// line 708 "parser.go"
		switch data[p] {
		case 32:
			goto tr40
		case 33:
			goto st17
		case 44:
			goto tr42
		case 59:
			goto tr42
		case 124:
			goto st17
		case 126:
			goto st17
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st17
				}
			case data[p] >= 9:
				goto tr40
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st17
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st17
				}
			default:
				goto st17
			}
		default:
			goto st17
		}
		goto st0
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		if data[p] == 34 {
			goto tr12
		}
		goto tr11
tr11:
// line 68 "ragel/parser.rl"

 str_beg = p 
	goto st5
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
// line 769 "parser.go"
		if data[p] == 34 {
			goto tr14
		}
		goto st5
tr12:
// line 68 "ragel/parser.rl"

 str_beg = p 
// line 69 "ragel/parser.rl"

 str_end = p 
	goto st18
tr14:
// line 69 "ragel/parser.rl"

 str_end = p 
	goto st18
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
// line 792 "parser.go"
		switch data[p] {
		case 32:
			goto st2
		case 44:
			goto st1
		case 59:
			goto st1
		}
		if 9 <= data[p] && data[p] <= 13 {
			goto st2
		}
		goto st0
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		switch data[p] {
		case 32:
			goto st2
		case 33:
			goto st16
		case 44:
			goto st1
		case 59:
			goto st1
		case 61:
			goto st3
		case 65:
			goto st20
		case 73:
			goto st37
		case 85:
			goto st48
		case 97:
			goto st20
		case 105:
			goto st37
		case 117:
			goto st48
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto st2
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
		switch data[p] {
		case 32:
			goto st2
		case 33:
			goto st16
		case 44:
			goto st1
		case 59:
			goto st1
		case 61:
			goto st3
		case 88:
			goto st21
		case 120:
			goto st21
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto st2
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		switch data[p] {
		case 32:
			goto st2
		case 33:
			goto st16
		case 44:
			goto st1
		case 45:
			goto st22
		case 59:
			goto st1
		case 61:
			goto st3
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto st2
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		switch data[p] {
		case 32:
			goto st2
		case 33:
			goto st16
		case 44:
			goto st1
		case 59:
			goto st1
		case 61:
			goto st3
		case 65:
			goto st23
		case 83:
			goto st29
		case 97:
			goto st23
		case 115:
			goto st29
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto st2
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
		switch data[p] {
		case 32:
			goto st2
		case 33:
			goto st16
		case 44:
			goto st1
		case 59:
			goto st1
		case 61:
			goto st3
		case 71:
			goto st24
		case 103:
			goto st24
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto st2
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
		switch data[p] {
		case 32:
			goto st2
		case 33:
			goto st16
		case 44:
			goto st1
		case 59:
			goto st1
		case 61:
			goto st3
		case 69:
			goto st25
		case 101:
			goto st25
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto st2
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		switch data[p] {
		case 32:
			goto st2
		case 33:
			goto st16
		case 44:
			goto st1
		case 59:
			goto st1
		case 61:
			goto st6
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto st2
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		switch data[p] {
		case 34:
			goto st4
		case 45:
			goto tr15
		case 46:
			goto tr9
		case 48:
			goto tr16
		case 58:
			goto tr9
		case 124:
			goto tr9
		case 126:
			goto tr9
		}
		switch {
		case data[p] < 49:
			switch {
			case data[p] > 39:
				if 42 <= data[p] && data[p] <= 43 {
					goto tr9
				}
			case data[p] >= 33:
				goto tr9
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto tr9
				}
			case data[p] >= 64:
				goto tr9
			}
		default:
			goto tr17
		}
		goto st0
tr15:
// line 70 "ragel/parser.rl"

 neg = -1 
// line 68 "ragel/parser.rl"

 str_beg = p 
	goto st26
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
// line 1232 "parser.go"
		switch data[p] {
		case 32:
			goto tr40
		case 33:
			goto st17
		case 44:
			goto tr42
		case 48:
			goto tr53
		case 58:
			goto st17
		case 59:
			goto tr42
		case 124:
			goto st17
		case 126:
			goto st17
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st17
				}
			case data[p] >= 9:
				goto tr40
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 49 <= data[p] && data[p] <= 57 {
					goto tr54
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st17
				}
			default:
				goto st17
			}
		default:
			goto st17
		}
		goto st0
tr16:
// line 78 "ragel/parser.rl"

 val = true; 
// line 71 "ragel/parser.rl"

 num = num * 10 + (int(data[p])-'0') 
// line 68 "ragel/parser.rl"

 str_beg = p 
	goto st27
tr53:
// line 78 "ragel/parser.rl"

 val = true; 
// line 71 "ragel/parser.rl"

 num = num * 10 + (int(data[p])-'0') 
	goto st27
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
// line 1302 "parser.go"
		switch data[p] {
		case 32:
			goto tr55
		case 33:
			goto st17
		case 44:
			goto tr56
		case 59:
			goto tr56
		case 124:
			goto st17
		case 126:
			goto st17
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st17
				}
			case data[p] >= 9:
				goto tr55
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st17
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st17
				}
			default:
				goto st17
			}
		default:
			goto st17
		}
		goto st0
tr17:
// line 78 "ragel/parser.rl"

 val = true; 
// line 71 "ragel/parser.rl"

 num = num * 10 + (int(data[p])-'0') 
// line 68 "ragel/parser.rl"

 str_beg = p 
	goto st28
tr54:
// line 78 "ragel/parser.rl"

 val = true; 
// line 71 "ragel/parser.rl"

 num = num * 10 + (int(data[p])-'0') 
	goto st28
tr57:
// line 71 "ragel/parser.rl"

 num = num * 10 + (int(data[p])-'0') 
	goto st28
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
// line 1373 "parser.go"
		switch data[p] {
		case 32:
			goto tr55
		case 33:
			goto st17
		case 44:
			goto tr56
		case 58:
			goto st17
		case 59:
			goto tr56
		case 124:
			goto st17
		case 126:
			goto st17
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st17
				}
			case data[p] >= 9:
				goto tr55
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 57 {
					goto tr57
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st17
				}
			default:
				goto st17
			}
		default:
			goto st17
		}
		goto st0
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
		switch data[p] {
		case 32:
			goto st2
		case 33:
			goto st16
		case 44:
			goto st1
		case 59:
			goto st1
		case 61:
			goto st3
		case 84:
			goto st30
		case 116:
			goto st30
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto st2
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
		switch data[p] {
		case 32:
			goto st2
		case 33:
			goto st16
		case 44:
			goto st1
		case 59:
			goto st1
		case 61:
			goto st3
		case 65:
			goto st31
		case 97:
			goto st31
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto st2
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
	st31:
		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
		switch data[p] {
		case 32:
			goto st2
		case 33:
			goto st16
		case 44:
			goto st1
		case 59:
			goto st1
		case 61:
			goto st3
		case 76:
			goto st32
		case 108:
			goto st32
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto st2
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
		switch data[p] {
		case 32:
			goto st2
		case 33:
			goto st16
		case 44:
			goto st1
		case 59:
			goto st1
		case 61:
			goto st3
		case 69:
			goto st33
		case 101:
			goto st33
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto st2
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
	st33:
		if p++; p == pe {
			goto _test_eof33
		}
	st_case_33:
		switch data[p] {
		case 32:
			goto tr62
		case 33:
			goto st16
		case 44:
			goto tr63
		case 59:
			goto tr63
		case 61:
			goto st7
		case 124:
			goto st16
		case 126:
			goto st16
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st16
				}
			case data[p] >= 9:
				goto tr62
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 48 <= data[p] && data[p] <= 58 {
					goto st16
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st16
				}
			default:
				goto st16
			}
		default:
			goto st16
		}
		goto st0
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		switch data[p] {
		case 34:
			goto st4
		case 45:
			goto tr18
		case 46:
			goto tr9
		case 48:
			goto tr19
		case 58:
			goto tr9
		case 124:
			goto tr9
		case 126:
			goto tr9
		}
		switch {
		case data[p] < 49:
			switch {
			case data[p] > 39:
				if 42 <= data[p] && data[p] <= 43 {
					goto tr9
				}
			case data[p] >= 33:
				goto tr9
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto tr9
				}
			case data[p] >= 64:
				goto tr9
			}
		default:
			goto tr20
		}
		goto st0
tr18:
// line 70 "ragel/parser.rl"

 neg = -1 
// line 68 "ragel/parser.rl"

 str_beg = p 
	goto st34
	st34:
		if p++; p == pe {
			goto _test_eof34
		}
	st_case_34:
// line 1730 "parser.go"
		switch data[p] {
		case 32:
			goto tr40
		case 33:
			goto st17
		case 44:
			goto tr42
		case 48:
			goto tr65
		case 58:
			goto st17
		case 59:
			goto tr42
		case 124:
			goto st17
		case 126:
			goto st17
		}
		switch {
		case data[p] < 42:
			switch {
			case data[p] > 13:
				if 35 <= data[p] && data[p] <= 39 {
					goto st17
				}
			case data[p] >= 9:
				goto tr40
			}
		case data[p] > 46:
			switch {
			case data[p] < 64:
				if 49 <= data[p] && data[p] <= 57 {
					goto tr66
				}
			case data[p] > 90:
				if 94 <= data[p] && data[p] <= 122 {
					goto st17
				}
			default:
				goto st17
			}
		default:
			goto st17
		}
		goto st0
tr19:
// line 78 "ragel/parser.rl"

 val = true; 
// line 71 "ragel/parser.rl"

 num = num * 10 + (int(data[p])-'0') 
// line 68 "ragel/parser.rl"

 str_beg = p 
	goto st35
tr65:
// line 78 "ragel/parser.rl"

 val = true; 
// line 71 "ragel/parser.rl"
